<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textDiplome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diplome"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textDebut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/date_debut"
            android:textColor="#AAAAAA"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:textColor="#AAAAAA"
            android:text="@string/date_fin" />
    </LinearLayout>

    <TextView
        android:id="@+id/textLieu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/lieu" />
</LinearLayout>